refactor: update typescript and convert to ESM package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES6",
+    "module": "ES2022",
     "moduleResolution": "node",
     "declaration": true,
     "removeComments": true,
