--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build": "rimraf dist && tsc"
   },
   "main": "dist/index.js",
+  "type": "module",
   "typings": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.2.4",
-    "typescript": "^4.0.3"
+    "typescript": "^5.2.2"
   },
   "release": {
     "branches": [
